--- a/template/home/blog_view/blog_view.html
+++ b/template/home/blog_view/blog_view.html
@@ -226,8 +226,8 @@
 
                      {% endfor %} 
                     {% if contacts.has_next %}
-                    
-                    <a href="?page=1">First</a>
+
+                    <a href="?page=1">first</a>
                     <a href="?page={{ contacts.next_page_number }}">Previous</a>
                     <a href="?page={{ contacts.paginator.num_pages }}">Last</a>
                     {% endif %} 
