--- a/template/home/base.html
+++ b/template/home/base.html
@@ -149,10 +149,7 @@
 
     <!-- ***** About Us Area Start ***** -->
     
-    {% block about_us %}
-        
-    
-        
+    {% block about_us %}   
     <section class="medica-about-us-area section-padding-100-20">
         <div class="container">
             <div class="row">
@@ -274,37 +271,10 @@
     <!-- ***** Cool Facts Area End ***** -->
 
     <!-- ***** Gallery Area Start ***** -->
-    <div class="medilife-gallery-area owl-carousel">
-        <!-- Single Gallery Item -->
-        <div class="single-gallery-item">
-            <img src="img/bg-img/g1.jpg" alt="">
-            <div class="view-more-btn">
-                <a href="img/bg-img/g1.jpg" class="btn gallery-img">See More +</a>
-            </div>
-        </div>
-        <!-- Single Gallery Item -->
-        <div class="single-gallery-item">
-            <img src="img/bg-img/g2.jpg" alt="">
-            <div class="view-more-btn">
-                <a href="img/bg-img/g2.jpg" class="btn gallery-img">See More +</a>
-            </div>
-        </div>
-        <!-- Single Gallery Item -->
-        <div class="single-gallery-item">
-            <img src="img/bg-img/g3.jpg" alt="">
-            <div class="view-more-btn">
-                <a href="img/bg-img/g3.jpg" class="btn gallery-img">See More +</a>
-            </div>
-        </div>
-
-        <!-- Single Gallery Item -->
-        <div class="single-gallery-item">
-            <img src="img/bg-img/g4.jpg" alt="">
-            <div class="view-more-btn">
-                <a href="img/bg-img/g4.jpg" class="btn gallery-img">See More +</a>
-            </div>
-        </div>
-    </div>
+    {% block slideshow %}
+    
+    {% endblock slideshow %}
+    
     <!-- ***** Gallery Area End ***** -->
 
     <!-- ***** Features Area Start ***** -->
