--- a/template/home/partials/main_header.html
+++ b/template/home/partials/main_header.html
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="blog.html">News</a>
+                                <a class="nav-link" href="blog.html">xxx</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
