--- a/template/home/blog_view/blog_view.html
+++ b/template/home/blog_view/blog_view.html
@@ -190,13 +190,7 @@
                             
                           </div>
                           <!-- <button type="submit" class="btn btn-primary mb-2">Confirm identity</button> -->
-                          <script>
-                            function myFunction() {
-                              var txt;
-                              var person = prompt("Please enter your comment:");
-                            }
-                            </script>
-                          <button class="btn btn-primary mb-2" onclick="myFunction()">Comment</button>
+                       <button href="" >Comment</button>
                     </div>
 
                 </div>
