--- a/template/dashboard/partials/leftbar.html
+++ b/template/dashboard/partials/leftbar.html
@@ -16,7 +16,7 @@
             <li><a class="treeview-item" href="{% url 'image_list' %}"><i class="icon fa fa-circle-o"></i> Image list</a></li>
             <li><a class="treeview-item" href="{% url 'manage_post' %}"  rel="noopener"><i class="icon fa fa-circle-o"></i> Manage post</a></li>
         
-            <li><a class="treeview-item" href="widgets.html"><i class="icon fa fa-circle-o"></i> Widgets</a></li>
+            <li><a class="treeview-item" href="{% url 'BloodBankManage' %}"><i class="icon fa fa-circle-o"></i> Widgets</a></li>
           </ul>
         </li>
         <li><a class="app-menu__item" href="charts.html"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">Charts</span></a></li>
