--- a/template/home/base.html
+++ b/template/home/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
+    <meta name="description" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -221,10 +221,16 @@
             </div>
         </div>
     </section>
-    
+    {% endblock %}
     <!-- ***** About Us Area End ***** -->
 
     <!-- ***** Cool Facts Area Start ***** -->
+    
+    {% block cool_area %}
+        
+    
+        
+  
     <section class="medilife-cool-facts-area section-padding-100-0">
         <div class="container">
             <div class="row">
