--- a/template/home/partials/menu_area.html
+++ b/template/home/partials/menu_area.html
@@ -33,7 +33,7 @@
     <!-- </ul> -->
     <!-- Appointment Button -->
     <li class="nav-item">
-    <a href="#" class="btn medilife-appoint-btn ml-30">For <span>emergencies</span> Click here</a>
+    <a href="{% url 'blood_banks' %}" class="btn medilife-appoint-btn ml-30">For <span>Blood Bank</span> Click here</a>
     </li>
     <!-- <ul class="navbar-nav ml-auto"> -->
     <li class="nav-item">
