--- a/template/dashboard/partials/leftbar.html
+++ b/template/dashboard/partials/leftbar.html
@@ -19,7 +19,7 @@
             <li><a class="treeview-item" href="{% url 'BloodBankManage' %}"><i class="icon fa fa-circle-o"></i> Widgets</a></li>
           </ul>
         </li>
-        <li><a class="app-menu__item" href="charts.html"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">Charts</span></a></li>
+        <li><a class="app-menu__item" href="{% url 'userlist' %}"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">Users</span></a></li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">Forms</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
             <li><a class="treeview-item" href="form-components.html"><i class="icon fa fa-circle-o"></i> Form Components</a></li>
