--- a/template/dashboard/base.html
+++ b/template/dashboard/base.html
@@ -55,7 +55,9 @@
           <div class="widget-small primary coloured-icon"><i class="icon fa fa-users fa-3x"></i>
             <div class="info">
               <h4>Users</h4>
-              <p><b>5</b></p>
+              
+              <p><b>{{total_user}}</b></p>
+              
             </div>
           </div>
         </div>
@@ -78,8 +80,9 @@
         <div class="col-md-6 col-lg-3">
           <div class="widget-small danger coloured-icon"><i class="icon fa fa-star fa-3x"></i>
             <div class="info">
-              <h4>Stars</h4>
-              <p><b>500</b></p>
+              <h4>Posts</h4>
+              
+              <p><b>{{total_post}}</b></p>
             </div>
           </div>
         </div>
