--- a/template/dashboard/users/single_user.html
+++ b/template/dashboard/users/single_user.html
@@ -8,7 +8,7 @@
  
   </ul> -->
   <table class="table table-striped table-dark">
-      {% if single_user %}
+      <!-- {% if single_user %} -->
     <thead>
       <tr>
         <th scope="col">Username : {{ single_user.username }} </th>
@@ -17,22 +17,29 @@
         <th scope="col">Last Date Of Donation : {{ single_user.last_date_of_donation }}</th>
     </tr>   
         <th scope="col">Location : {{ single_user.present_add }}</th>
-        
-      </tr>
-    </tr>   
+        <tr>
+          <tr>   
     <th scope="col">Blood Group  : {{ single_user.blood_group }}</th>
     
   </tr>
-</tr>   
+  <tr>   
 <th scope="col">Phone  : {{ single_user.phone }}</th>
 
 </tr>
-</tr>   
+<tr>   
 <th scope="col">Email : {{ single_user.email }}</th>
 
 </tr>
+<!-- {% endif %} -->
+<tr>  
+{% if c > 90  %}
+<th scope="col">Status : <button type="button" class="btn btn-primary">Available</button> </th>
+{% else %}
+<th scope="col">Status : <button type="button" class="btn btn-primary">Unavailable</button> </th>
+{% endif %}
+</tr>
     </thead>
-    {% endif %}
+   
     <tbody>
     
     </tbody>
