--- a/template/home/blood_blog/blood_blog_form.html
+++ b/template/home/blood_blog/blood_blog_form.html
@@ -4,7 +4,7 @@
      home page
  {% endblock title %}
      
- {% block blood_blog_post %}
+ {% block blood_blog_form %}
  <div class="medilife-book-an-appoinment-area">
         <div class="container">
             <div class="row">
