--- a/template/home/partials/menu_area.html
+++ b/template/home/partials/menu_area.html
@@ -29,7 +29,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="about-us.html">AboutUs</a>
+      <a class="nav-link" href="about-us.html">About Us</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="services.html">Services</a>
@@ -38,7 +38,7 @@
       <a class="nav-link" href="{% url 'blood_blog' %}">Blog</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="#">Gallery</a>
     </li>
 
     <!-- </ul> -->
