Customized password reset system

--- a/template/accounts/password_reset/password_reset_email.html
+++ b/template/accounts/password_reset/password_reset_email.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Sign in - SOMC</title>
+    <title>Reset Password - SOMC</title>
     <style>
     html,body {
       background: rgb(2,0,36);
@@ -23,18 +23,16 @@
       <div class="row d-flex justify-content-center">
         
         <div class="col-md-5 list-group-item mt-5">
-            <h4 class="text-center">Log in </h4>
+            <h4 class="text-center">Enter Your Email </h4>
           <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
               <div class="tile-footer">
-                  <button class="btn btn-primary" type="submit">Submit</button>
-                  <span class="ml-1 mr-1">Or</span>
-                  <a href="{% url 'register' %}" class="btn btn-primary">Create an account</a>
+                  <!-- <button  class="btn btn-primary" type="submit">Send</button> -->
+                 <button class="btn btn-primary" type="submit">Send</button>
                 </div>
           </form>
           <br>
-          <a href="{% url 'forget_password' %}" class="btn">Forget Password?</a>
         </div>
       </div>
     </div>
